name:                bifunctors-example
version:             0.1.0.0
synopsis:            cabal example
license:             GPL-3
license-file:        LICENSE
author:              Sönke Hahn
maintainer:          soenkehahn@gmail.com
category:            Development
build-type:          Simple
cabal-version:       >=1.10

executable safe-example
  main-is: Main.hs
  build-depends:       base, bifunctors
  default-language:    Haskell2010
